# CPNR_modular_sim

./: CMakeLists.txt  CPNR_modular_sim.cc  README.md  analysis.cc  analysis_kinetic.cc  run.mac  vis.mac
include/: ANNRIGd_Auxiliary.hh  ANNRIGd_DummyModel.hh  ANNRIGd_GdNCaptureGammaGenerator.hh  ANNRIGd_Model.hh  ANNRIGd_OutputConverter.hh  DetectorConstruction.hh  EventAction.hh  GdNeutronHPCapture.hh  GdNeutronHPCaptureFS.hh  LSHit.hh  MyHadronPhysics.hh  MyShieldingPhysList.hh  PMTHit.hh  PMTSD.hh  PhysicsList.hh  SteppingAction.hh
src/: ANNRIGd_156GdContinuumModelV2.cc  ANNRIGd_156GdContinuumModelV2.hh  ANNRIGd_156GdDiscreteModel.cc  ANNRIGd_156GdDiscreteModel.hh  ANNRIGd_158GdContinuumModelV2.cc  ANNRIGd_158GdContinuumModelV2.hh  ANNRIGd_158GdDiscreteModel.cc  ANNRIGd_158GdDiscreteModel.hh  ANNRIGd_Auxiliary.cc  ANNRIGd_DummyModel.cc  ANNRIGd_GdNCaptureGammaGenerator.cc  ANNRIGd_GeneratorConfigurator.cc  ANNRIGd_Model.cc  ANNRIGd_ModelType.cc  ANNRIGd_OutputConverter.cc  ANNRIGd_ReactionProduct.cc  ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  EventAction.cc  GdNeutronHPCapture.cc  GdNeutronHPCapture.hh  GdNeutronHPCaptureFS.cc  LSHit.cc  LSHit.hh  LSSD.cc  LSSD.hh  MyHadronPhysics.cc  MyShieldingPhysList.cc  PMTHit.cc  PMTHit.hh  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  TrackingAction.cc  TrackingAction.hh
src/src/: MyShieldingPhysList.cc
